--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-body {
+   body {
     font-family: Arial, Helvetica, sans-serif;
     color: #222;
   }
@@ -24,4 +24,23 @@ body {
   
   .icon {
     font-size: 4rem;
+    order: -1
+  }
+
+  .emojis {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+  }
+
+  .emoji {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    /* align-items: center; */
+  }
+
+  .icon {
+    align-self: center;
   }
